bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: not found: value avancer
    avancer()
    ^BDR:6: error: not found: value avancer
    avancer()
    ^BDR:7: error: not found: value avancer
    avancer()
    ^BDR:9: error: not found: value avancer
    avancer()
    ^BDR:10: error: not found: value avancer
    avancer()
    ^BDR:11: error: not found: value avancer
    avancer()
    ^BDR:14: error: not found: value avancer
    avancer()
    ^BDR:17: error: not found: value avancer
    avancer()
    ^BDR:21: error: not found: value avancer
    avancer()
    ^BDR:23: error: not found: value reculer
    reculer()
    ^BDR:25: error: not found: value reculer
    reculer()
    ^BDR:26: error: not found: value reculer
    reculer()
    ^BDR:28: error: not found: value reculer
    reculer()
    ^BDR:29: error: not found: value reculer
    reculer()
    ^BDR:30: error: not found: value reculer
    reculer()
    ^